--- a/index.html
+++ b/index.html
@@ -83,12 +83,80 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table</a>
+                        data-toggle="modal" href="#reservemodal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="modal fade" id="reservemodal" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button class="close" type="button" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="numberofguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio1" name="radio1" class="form-check-input">
+                                <label for="radio1" class="form-check-label">1</label>
+                            </div>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio2" name="radio2" class="form-check-input">
+                                <label for="radio2" class="form-check-label">2</label>
+                            </div>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio3" name="radio3" class="form-check-input">
+                                <label for="radio3" class="form-check-label">3</label>
+                            </div>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio4" name="radio4" class="form-check-input">
+                                <label for="radio4" class="form-check-label">4</label>
+                            </div>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio5" name="radio5" class="form-check-input">
+                                <label for="radio5" class="form-check-label">5</label>
+                            </div>
+                            <div class="col-2 col-sm-1">
+                                <input type="radio" id="radio6" name="radio6" class="form-check-input">
+                                <label for="radio6" class="form-check-label">6</label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-12 col-sm-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-sm-3">
+                                <input type="text" name="dateandtime" id="dateandtime" placeholder="Date">
+                            </div>
+                            <div class="col-sm-3">
+                                <input type="text" name="dateandtime" id="dateandtime" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-10 offset-sm-2">
+                                <button class="btn btn-secondary btn-sm ml-auto" type="button" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="container">
         <div class="row row-content">
@@ -190,60 +258,6 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center" id="reserveform">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label for="numberofguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio1" name="radio1" class="form-check-input">
-                                    <label for="radio1" class="form-check-label">1</label>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio2" name="radio2" class="form-check-input">
-                                    <label for="radio2" class="form-check-label">2</label>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio3" name="radio3" class="form-check-input">
-                                    <label for="radio3" class="form-check-label">3</label>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio4" name="radio4" class="form-check-input">
-                                    <label for="radio4" class="form-check-label">4</label>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio5" name="radio5" class="form-check-input">
-                                    <label for="radio5" class="form-check-label">5</label>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <input type="radio" id="radio6" name="radio6" class="form-check-input">
-                                    <label for="radio6" class="form-check-label">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                                <div class="col-12 col-sm-3">
-                                    <input type="text" name="dateandtime" id="dateandtime" placeholder="Date">
-                                </div>
-                                <div class="col-12 col-sm-3 offset-sm-2">
-                                    <input type="text" name="dateandtime" id="dateandtime" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-sm-10 offset-sm-2">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -289,11 +303,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
