--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="navbar-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
             </ul>
             <span class="navbar-text">
-                <a data-target="#loginmodal" data-toggle="modal">
+                <a id="loginButton">
                     <span class="fa fa-sign-in"></span> Login
                 </a>
             </span>
@@ -42,7 +42,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button class="close" type="button" data-dismiss="modal">&times;</button>
+                    <button class="close" type="button" id="closeLoginModal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="form-row">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="modal" href="#reservemodal">Reserve Table</a>
+                    href="#reservemodal" id="reserveTableButton">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a Table</h4>
-                    <button class="close" type="button" data-dismiss="modal">&times;</button>
+                    <button class="close" type="button" id="closeModal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
